[package]
name = "lobo"
version = "0.1.0"
edition = "2021"
description = "LOBo — a limit order book (LOB) matching engine with price-time priority."
license = "MIT"
readme = "README.md"

[lib]
name = "lobo"
path = "src/lib.rs"

[[bin]]
name = "lobo"
path = "src/main.rs"

[profile.release]
opt-level = 3
